# arcade

./: .gitignore  LICENSE-SW.md  README.md  arcade.kicad_pcb  arcade.kicad_pro  arcade.kicad_sch  inputs.kicad_sch  rgb amp.kicad_sch  rgb_mod.kicad_sch  vga-rgbs.kicad_sch
bom/: ibom.html
gerbers/: arcade-B_Cu.gbr  arcade-B_Mask.gbr  arcade-B_Paste.gbr  arcade-B_Silkscreen.gbr  arcade-Edge_Cuts.gbr  arcade-F_Cu.gbr  arcade-F_Mask.gbr  arcade-F_Paste.gbr  arcade-F_Silkscreen.gbr  arcade-NPTH.drl  arcade-PTH.drl  arcade-job.gbrjob
psx/: psx.kicad_pcb  psx.kicad_pro  psx.kicad_sch
psx/gerbers/: psx-B_Cu.gbr  psx-B_Mask.gbr  psx-B_Paste.gbr  psx-B_Silkscreen.gbr  psx-Edge_Cuts.gbr  psx-F_Cu.gbr  psx-F_Mask.gbr  psx-F_Paste.gbr  psx-F_Silkscreen.gbr  psx-NPTH.drl  psx-PTH.drl  psx-job.gbrjob
src/: CMakeLists.txt  accessory.c  controllers.c  stick.c  tusb_config.h  usb_descriptors.c  vga.c
stick/: stick.kicad_pcb  stick.kicad_pro  stick.kicad_sch
stick/gerbers/: stick-B_Cu.gbr  stick-B_Mask.gbr  stick-B_Paste.gbr  stick-B_Silkscreen.gbr  stick-Edge_Cuts.gbr  stick-F_Cu.gbr  stick-F_Mask.gbr  stick-F_Paste.gbr  stick-F_Silkscreen.gbr  stick-NPTH.drl  stick-PTH.drl  stick-job.gbrjob
vga/: vga.kicad_pcb  vga.kicad_pro  vga.kicad_sch
vga/gerbers/: vga-B_Cu.gbr  vga-B_Mask.gbr  vga-B_Paste.gbr  vga-B_Silkscreen.gbr  vga-Edge_Cuts.gbr  vga-F_Cu.gbr  vga-F_Mask.gbr  vga-F_Paste.gbr  vga-F_Silkscreen.gbr  vga-NPTH.drl  vga-PTH.drl  vga-job.gbrjob
